syntax = "proto3";

package core;

option go_package = "github.com/pokt-network/pocket/shared/core/types";

enum ActorType {
  ACTOR_TYPE_UNSPECIFIED = 0;
  ACTOR_TYPE_APP = 1;
  ACTOR_TYPE_SERVICER = 2;
  ACTOR_TYPE_FISH = 3;
  ACTOR_TYPE_VAL = 4;
}

enum StakeStatus {
  UnknownStatus = 0;
  Unstaking = 1;
  Staked = 2;
  Unstaked = 3;
}

message Actor {
  ActorType actor_type = 1;
  string address = 2;
  string public_key = 3;
  repeated string chains = 4; // Not applicable to `Validator` actors
  string service_url = 5; // Not applicable to `Application` actors
  string staked_amount = 6;
  int64 paused_height = 7;
  int64 unstaking_height = 8;
  string output = 9;
}
